# rag-agents-lab

./: etf_doc.txt  hello.py  pyproject.toml
phases/phase1/: embeddings.npy  exercice1.py  exercice2.py  exercice3.py
phases/phase2/: exercice1.py  exercice2.py  exercice3.py  exercice4.py
phases/phase3/: exercice1.py  exercice2.py  exercice3.py  exercice4.py
phases/phase3/chroma_db/: chroma.sqlite3
phases/phase3/chroma_langchain/: chroma.sqlite3
phases/phase3/chroma_pdf/: chroma.sqlite3
phases/phase4/: exercice1.py  exercice2.py  exercice3.py  exercice4.py
phases/phase5/: exercice1.py  exercice2.py  exercice3.py  exercice4.py
phases/phase6/: exercice1.py  exercice2.py  exercice3.py  exercice4.py
phases/phase6/chroma_agentic/: chroma.sqlite3
phases/phase6/chroma_combined/: chroma.sqlite3
phases/phase6/chroma_etf/: chroma.sqlite3
phases/phase6/chroma_iterative/: chroma.sqlite3
phases/phase6/chroma_strategie/: chroma.sqlite3
